--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -461,6 +461,10 @@
     "message": "Previous selected tab",
     "description": "Previous selected tab"
   },
+  "actionNameToggleMaximize": {
+    "message": "Maximize window / Before window size",
+    "description": "Toggle window size"
+  },
   "actionNameMaximize": {
     "message": "Maximize window",
     "description": "Maximize window"
@@ -700,6 +704,10 @@
   "actionDescriptionPreviousSelectedTab": {
     "message": "Switches to the last active tab.",
     "description": "Switches to the last active tab."
+  },
+  "actionDescriptionToggleMaximize": {
+    "message": "Toggle the current window size.",
+    "description": "Toggle the current window size."
   },
   "actionDescriptionMaximize": {
     "message": "Maximizes the current window.",
