--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -451,6 +451,10 @@
     "message": "前に選択していたタブ",
     "description": "Previous selected tab"
   },
+  "actionNameToggleMaximize": {
+    "message": "ウィンドウを最大化 / 元のサイズに戻す",
+    "description": "Toggle window size"
+  },
   "actionNameMaximize": {
     "message": "ウィンドウを最大化",
     "description": "Maximize window"
@@ -690,6 +694,10 @@
   "actionDescriptionPreviousSelectedTab": {
     "message": "最後のアクティブなタブに切り替えます。",
     "description": "Switches to the last active tab."
+  },
+  "actionDescriptionToggleMaximize": {
+    "message": "現在のウィンドウサイズを切り替えます。",
+    "description": "Toggle the current window size."
   },
   "actionDescriptionMaximize": {
     "message": "現在のウィンドウを最大化します。",
