config.json default Wheel right botton & Improbe ja_JP

--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -684,7 +684,7 @@
     "description": "Switches to the left tab of the current tab."
   },
   "actionDescriptionFirstTab": {
-    "message": "一番左のタブに切り替えます。",
+    "message": "ピン留めされていない一番左のタブに切り替えます。",
     "description": "Switches to the far left tab."
   },
   "actionDescriptionLastTab": {
