en messege.json "message""description"

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -462,8 +462,8 @@
     "description": "Previous selected tab"
   },
   "actionNameToggleMaximize": {
-    "message": "Maximize window / Before window size",
-    "description": "Toggle window size"
+    "message": "Switches between maximized and normal window size.",
+    "description": "Switches between maximized and normal window size."
   },
   "actionNameMaximize": {
     "message": "Maximize window",
