--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -706,8 +706,8 @@
     "description": "Switches to the last active tab."
   },
   "actionDescriptionToggleMaximize": {
-    "message": "Toggle the current window size.",
-    "description": "Toggle the current window size."
+    "message": "Switches between maximized and normal window size.",
+    "description": "Switches between maximized and normal window size."
   },
   "actionDescriptionMaximize": {
     "message": "Maximizes the current window.",
