Add function: ToggleWindowSize

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -469,6 +469,10 @@
     "message": "Minimize window",
     "description": "Minimize window"
   },
+  "actionNameToggleWindowSize": {
+    "message": "Toggle window size",
+    "description": "Toggle window size"
+  },
   "actionNameFullscreen": {
     "message": "Toggle full screen",
     "description": "Toggle full screen"
@@ -708,6 +712,10 @@
   "actionDescriptionMinimize": {
     "message": "Minimizes the current window.",
     "description": "Minimizes the current window."
+  },
+  "actionDescriptionToggleWindowSize": {
+    "message": "Switches between maximized and normal window size.",
+    "description": "Switches between maximized and normal window size."
   },
   "actionDescriptionFullscreen": {
     "message": "Activates or deactivates full screen mode.",
