--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -609,6 +609,15 @@
     "message": "View page source",
     "description": "View page source"
   },
+  "actionNamePopupAllTabs": {
+    "message": "[Popup] All tabs",
+    "description": "[Popup] All tabs"
+  },
+  "actionNamePopupRecentlyClosedTabs": {
+    "message": "[Popup] Recently closed tabs",
+    "description": "[Popup] Recently closed tabs"
+  },
+
   "actionDescriptionBookmark": {
     "message": "Adds or removes a bookmark.",
     "description": "Adds or removes a bookmark."
@@ -853,6 +862,15 @@
     "message": "Opens a new tab containing the source code of the page.",
     "description": "Opens a new tab containing the source code of the page."
   },
+  "actionDescriptionPopupAllTabs": {
+    "message": "Opens a popup containing a list of all currently open tabs and offers the possibility to switch to one of them.",
+    "description": "Opens a popup containing a list of all currently open tabs and offers the possibility to switch to one of them."
+  },
+  "actionDescriptionPopupRecentlyClosedTabs": {
+    "message": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them.",
+    "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
+  },
+
   "extraNameRockerActive": {
     "message": "Rocker gesture",
     "description": "Rocker gesture"
