--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -310,6 +310,10 @@
     "message": "Prompt Save As",
     "description": "Prompt Save As"
   },
+  "settingNameFirstTabIncludePinned": {
+    "message": "Include pinned tabs",
+    "description": "Include pinned tabs"
+  },
 
   "settingDescriptionScrollDuration": {
     "message": "Duration in milliseconds for scroll top/bottom.",
@@ -354,6 +358,10 @@
   "settingDescriptionPromptSaveImageAs": {
     "message": "Defines if the \"Save As\" dialog should appear or the image should be downloaded silently to the users default download folder.",
     "description": "Defines if the \"Save As\" dialog should appear or the image should be downloaded silently to the users default download folder."
+  },
+  "settingDescriptionFirstTabIncludePinned": {
+    "message": "Defines if pinned tabs should be treated as the leftmost tabs.",
+    "description": "Defines if pinned tabs should be treated as the leftmost tabs."
   },
 
   "explanationGesturesHeading": {
