--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -177,6 +177,11 @@
     "description": "center"
   },
 
+  "settingNameUpdateNotification": {
+    "message": "Display update notification",
+    "description": "Display update notification"
+  },
+
   "settingDescriptionMouseButton": {
     "message": "The mouse button which will trigger the gesture.",
     "description": "The mouse button which will trigger the gesture."
@@ -236,6 +241,10 @@
   "settingDescriptionDirectionsBackgroundOpacity": {
     "message": "Accepts any value in the range of 0 (invisible) and 1 (visible).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  },
+  "settingDescriptionUpdateNotification": {
+    "message": "Show a notification when Gesturefy is updated.",
+    "description": "Show a notification when Gesturefy is updated."
   },
 
   "settingNameRemoveTabFocus": {
