improved front-end functionality for blacklist

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -382,8 +382,8 @@
     "description": "Information:"
   },
   "explanationBlacklistText": {
-    "message": "Here you can add web pages on which no gesture functions should be executed. After adding you can edit and delete them again.",
-    "description": "Here you can add web pages on which no gesture functions should be executed. After adding you can edit and delete them again."
+    "message": "Here you can add web pages on which no gesture functions should be executed. After adding you can edit and delete them again. To include more URL paths, please use '/*' at the end of the URL, for example: google.com/*",
+    "description": "Here you can add web pages on which no gesture functions should be executed. After adding you can edit and delete them again. To include more URL paths, please use '/*' at the end of the URL, for example: google.com/*"
   },
   "explanationGesturesHeading": {
     "message": "Information:",
@@ -925,14 +925,6 @@
   "blacklistNameAdd": {
     "message": "Add",
     "description": "Add"
-  },
-  "blacklistPattern": {
-    "message": "Please enter a valid URL.",
-    "description": "Please enter a valid URL."
-  },
-  "blacklistDuplicate": {
-    "message": "The element already exists.",
-    "description": "The element already exists."
   },
 
   "toggleButtonOn": {
