add option to change theme, add css variables

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1012,5 +1012,18 @@
   "aboutLinkAddon": {
     "message": "View addon page",
     "description": "View addon page"
+  },
+
+  "themeLabel": {
+    "message": "Theme:",
+    "description": "Theme:"
+  },
+  "darkTheme": {
+    "message": "Dark",
+    "description": "Dark"
+  },
+  "defaultTheme": {
+    "message": "Default",
+    "description": "Default"
   }
 }
