--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1022,6 +1022,10 @@
     "message": "Dark",
     "description": "Dark"
   },
+  "darkerTheme": {
+    "message": "Darker",
+    "description": "Darker"
+  },
   "defaultTheme": {
     "message": "Default",
     "description": "Default"
